# asif-movie-intel-studio

./: .gitignore  Makefile  README.md  docker-compose.yml  pnpm-workspace.yaml  pyproject.toml
artifacts/api-server/src/: app.ts  index.ts
artifacts/mockup-sandbox/: vite.config.ts
artifacts/movie-studio/: Dockerfile  index.html  nginx.conf  package.json  requirements.yaml  vite.config.ts
artifacts/movie-studio/src/: App.tsx  index.css
backend/: .env.example  Dockerfile  requirements.txt  start_production.py
backend/app/: main.py
backend/app/api/: routes_chat.py  routes_eval.py  routes_health.py  routes_movies.py  routes_upload.py
backend/app/core/: config.py  constants.py  logging.py  prompts.py  security.py  versioning.py
backend/app/db/: audit_store.py  metadata_store.py  vector_store.py
backend/app/graph/: nodes.py  state.py  workflow.py
backend/app/models/: schemas_chat.py  schemas_common.py  schemas_eval.py  schemas_movie.py  schemas_upload.py
backend/app/observability/: langsmith_setup.py  otel_setup.py
backend/app/sample_data/: seed_movies.json
backend/app/scripts/: ingest_sample_docs.py  seed_data.py
backend/app/services/: bedrock_service.py  citation_service.py  (+10 more)
backend/tests/: test_chat.py  test_compare.py  test_graph.py  test_guardrails.py  test_ingestion.py  test_tmdb.py
docs/: TUTORIAL.md  architecture.md  evaluation.md  prompt-versioning.md  routing.md  security.md
eval/: custom_metrics.py  ragas_runner.py
eval/datasets/: adversarial_queries.json  movie_eval_set.json  routing_eval_set.json
eval/results/: .gitignore
(+29 files in other folders)
